EDA section added temporarily

--- a/HA1/HA1_catia.ipynb
+++ b/HA1/HA1_catia.ipynb
@@ -333,7 +333,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.2: Data Splitting"
+    "#### 0.2: Explorative Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before splitting the data, exploratory data analysis (EDA) should be performed to understand the characteristics of the dataset, including checking for linearity.\n",
+    "Visualizations like scatter plots, correlation matrices, or regression diagnostic plots can help assess the linearity between the target variable and predictor variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0.3: Data Splitting"
    ]
   },
   {
