--- a/HA1/HA1_catia.ipynb
+++ b/HA1/HA1_catia.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "\n",
+    "\n",
     "# regression models\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
@@ -364,8 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into training and test set\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# DATA SPLITTING #\n",
     "\n",
     "# Split data into training and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(df.drop('critical_temp', axis=1), df['critical_temp'], test_size=0.2, random_state=42)\n",
@@ -807,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
