add binary classification model 1) decision tree

--- a/HA1/HA1_catia.ipynb
+++ b/HA1/HA1_catia.ipynb
@@ -543,32 +543,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Precision is:  0.8053\n",
-      "The Recall is:  0.7590\n",
-      "The F1 score is:  0.7815\n",
-      "The Matthews correlation coefficient is:  0.7406\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = DecisionTreeClassifier()\n",
-    "model.fit(X_train, y_train_bin)\n",
-    "y_preds = model.predict(X_val)\n",
-    "print(print_scores(y_val_bin, y_preds))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 91,
    "outputs": [
     {
@@ -601,6 +575,10 @@
     "\n",
     "scores_df = pd.DataFrame(results, index=None)\n",
     "scores_df = scores_df.sort_values(by=\"F1\", ascending=False)\n",
+    "\n",
+    "best_max_depth = scores_df.iloc[0].max_depth\n",
+    "best_min_samples_leaf = int(scores_df.iloc[0].min_samples_leaf)\n",
+    "\n",
     "scores_df"
    ],
    "metadata": {
@@ -610,19 +588,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can see that the best combination of hyperparameters is `min_samples_leaf`=6 and `max_depth`=28. When it comes to `min_samples_leaf`, we can see that the value 6 of this parameter is in the top 10 best results. But when it comes to max depth, it varies in the top results and the difference in performance is very small, so we will take a closer look into this parameter."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "outputs": [],
-   "source": [
-    "best_max_depth = scores_df.iloc[0].max_depth\n",
-    "best_min_samples_leaf = int(scores_df.iloc[0].min_samples_leaf)"
+    "We can see that the best combination of hyperparameters is `min_samples_leaf`=6 and `max_depth`=28. When it comes to `min_samples_leaf`, we can be quite sure about this parameter, since all the top 10 best models have it set to 6. However, when it comes to `max_depth`, it varies significantly among the top 10 results and the difference in F1 scores is very small. Therefore, we will explore this parameter a bit deeper.\n",
+    "\n",
+    "To make sure our model does not overfit, we will compare the results on the training as well as the validation set."
    ],
    "metadata": {
     "collapsed": false
@@ -668,7 +636,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Based on the plot above we can see that on the validation set we already get good results for `max_depth`~13. With increasing the model complexity to bigger max_depth, we don't get any significant improvements. Thus, we can assume that `max_depth`=13 would be enough."
+    "Based on the plot above we can see that the upper bound for the F1 score on the validation set seems to be 0.8. We already get almost the best possible results on the validation set for `max_depth`~14. With increasing the model complexity to bigger max_depth, we don't get any significant improvements. Thus, we can assume that `max_depth`=14 would be enough."
    ],
    "metadata": {
     "collapsed": false
@@ -685,19 +653,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The F1 score on the validation set is:  0.8000\n",
-      "The F1 score on the Independent Validation Set (IVS) is:  0.7749\n"
+      "The F1 score on the validation set is:  0.8007\n",
+      "The F1 score on the Independent Validation Set (IVS) is:  0.7779\n"
      ]
     }
    ],
    "source": [
-    "best_max_depth = 13\n",
+    "best_max_depth = 14\n",
     "\n",
     "model = DecisionTreeClassifier(max_depth=best_max_depth, min_samples_leaf=best_min_samples_leaf)\n",
     "model.fit(X_train, y_train_bin)\n",
