packages + run the code
Included missing packages and run the code for regression decision tree

--- a/HA1/HA1.ipynb
+++ b/HA1/HA1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
+    "from sklearn import metrics\n",
     "\n",
     "# regression models\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[5 rows x 82 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,9 +349,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:425: FitFailedWarning: \n",
+      "40 fits failed out of a total of 60.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "20 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\", line 1145, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\", line 638, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'squared_error', 'friedman_mse', 'absolute_error', 'poisson'}. Got 'mse' instead.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "20 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\", line 1145, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\", line 638, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'squared_error', 'friedman_mse', 'absolute_error', 'poisson'}. Got 'mae' instead.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_search.py:979: UserWarning: One or more of the test scores are non-finite: [          nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan\n",
+      " -391.42954576 -391.42954576 -391.42954576 -391.42954576 -345.50574471\n",
+      " -345.50574471 -345.50574471 -345.50574471 -316.39288994 -316.39288994\n",
+      " -316.39288994 -316.23470888 -277.94676397 -277.9694606  -278.42187328\n",
+      " -279.54505079 -247.85738954 -246.8612076  -247.28624029 -248.98591739\n",
+      "           nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan\n",
+      "           nan           nan           nan           nan           nan]\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine train and test data for GridSearchCV\n",
     "X_combined = np.vstack((X_train, X_test))\n",
@@ -395,9 +448,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tasha\\AppData\\Local\\Temp\\ipykernel_11196\\628049360.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_mse['mean_test_score'] = -df_mse['mean_test_score']  # Convert negative MSE to positive\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Max Depth</th>\n",
+       "      <th>Criterion</th>\n",
+       "      <th>Min Samples Leaf</th>\n",
+       "      <th>Mean MSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>6</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>10</td>\n",
+       "      <td>246.861208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>6</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>20</td>\n",
+       "      <td>247.286240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>6</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>5</td>\n",
+       "      <td>247.857390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>6</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>25</td>\n",
+       "      <td>248.985917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>5</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>5</td>\n",
+       "      <td>277.946764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>5</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>10</td>\n",
+       "      <td>277.969461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>5</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>20</td>\n",
+       "      <td>278.421873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>5</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>25</td>\n",
+       "      <td>279.545051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>4</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>25</td>\n",
+       "      <td>316.234709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>4</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>20</td>\n",
+       "      <td>316.392890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>4</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>10</td>\n",
+       "      <td>316.392890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>4</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>5</td>\n",
+       "      <td>316.392890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>3</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>25</td>\n",
+       "      <td>345.505745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>20</td>\n",
+       "      <td>345.505745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>10</td>\n",
+       "      <td>345.505745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>3</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>5</td>\n",
+       "      <td>345.505745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>25</td>\n",
+       "      <td>391.429546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>20</td>\n",
+       "      <td>391.429546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>10</td>\n",
+       "      <td>391.429546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2</td>\n",
+       "      <td>friedman_mse</td>\n",
+       "      <td>5</td>\n",
+       "      <td>391.429546</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Max Depth     Criterion  Min Samples Leaf    Mean MSE\n",
+       "37          6  friedman_mse                10  246.861208\n",
+       "38          6  friedman_mse                20  247.286240\n",
+       "36          6  friedman_mse                 5  247.857390\n",
+       "39          6  friedman_mse                25  248.985917\n",
+       "32          5  friedman_mse                 5  277.946764\n",
+       "33          5  friedman_mse                10  277.969461\n",
+       "34          5  friedman_mse                20  278.421873\n",
+       "35          5  friedman_mse                25  279.545051\n",
+       "31          4  friedman_mse                25  316.234709\n",
+       "30          4  friedman_mse                20  316.392890\n",
+       "29          4  friedman_mse                10  316.392890\n",
+       "28          4  friedman_mse                 5  316.392890\n",
+       "27          3  friedman_mse                25  345.505745\n",
+       "26          3  friedman_mse                20  345.505745\n",
+       "25          3  friedman_mse                10  345.505745\n",
+       "24          3  friedman_mse                 5  345.505745\n",
+       "23          2  friedman_mse                25  391.429546\n",
+       "22          2  friedman_mse                20  391.429546\n",
+       "21          2  friedman_mse                10  391.429546\n",
+       "20          2  friedman_mse                 5  391.429546"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Extract the results\n",
     "results = gridCV.cv_results_\n",
@@ -433,9 +699,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE) on Testing Set: 218.84371476798532\n",
+      "Root Mean Squared Error (RMSE) on Testing Set: 14.793367255901725\n",
+      "Mean Absolute Error (MAE) on Testing Set: 9.810351089928346\n",
+      "R-squared on Testing Set: 0.8100800401574464\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict on the testing set\n",
     "y_pred_test = dtree_regressor_best.predict(X_test)\n",
@@ -462,9 +747,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE) on Validation Set: 228.45223135337554\n",
+      "Root Mean Squared Error (RMSE) on Validation Set: 15.114636328849448\n",
+      "Mean Absolute Error (MAE) on Validation Set: 9.959863421811066\n",
+      "R-squared on Validation Set: 0.8091225267981127\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tasha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict on the validation set\n",
     "y_pred_val = dtree_regressor_best.predict(X_val)\n",
@@ -1571,7 +1875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
