shorten objective 2 section

--- a/HA1/HA1_catia.ipynb
+++ b/HA1/HA1_catia.ipynb
@@ -1244,6 +1244,15 @@
    "source": [
     "### **Objective 2** - Produce the best binary classification model assuming as positive all instances with values of critical_temp >= 80.0 and as negatives all remaining cases"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
