Validation metrics df fixed

--- a/HA1/HA1.ipynb
+++ b/HA1/HA1.ipynb
@@ -1082,9 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\antun\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1143,16 +1151,26 @@
        "R-squared        0.809123     0.803784"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Predict on validation set - Decision Tree\n",
+    "y_pred_val = dtree_regressor_best.predict(X_val)\n",
+    "\n",
+    "# Define metrics for validation set\n",
+    "mse_val = mean_squared_error(y_val, y_pred_val)\n",
+    "rmse_val = np.sqrt(mse_val)\n",
+    "mae_val = mean_absolute_error(y_val, y_pred_val)\n",
+    "r2_val = r2_score(y_val, y_pred_val)\n",
+    "\n",
     "# Calculate metrics for validation set\n",
     "metrics_val = {\n",
-    "    \"Validation Set\": [mse, rmse, mae, r2]\n",
+    "    \"Validation Set\": [mse_val, rmse_val, mae_val, r2_val]\n",
     "}\n",
+    "\n",
     "# Calculate metrics for testing set\n",
     "metrics_test = {\n",
     "    \"Testing Set\": [mse_test, rmse_test, mae_test, r2_test]\n",
@@ -1163,7 +1181,8 @@
     "# Combine the DataFrames for validation and testing metrics\n",
     "df_metrics = pd.concat([df_metrics_val, df_metrics_test], axis=1)\n",
     "# Display the DataFrame\n",
-    "df_metrics\n"
+    "df_metrics\n",
+    "\n"
    ]
   },
   {
