--- a/HA1/HA1.ipynb
+++ b/HA1/HA1.ipynb
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will train the model perform GridSearch on testing set to establish the best hyperparameters min_sample_leaf and max_depth:"
+    "We will train the model perform GridSearch on testing set to establish the best hyperparameters `min_sample_leaf` and `max_depth`:"
    ]
   },
   {
@@ -678,15 +678,17 @@
     "# Drop rows where 'Mean MSE' is NaN\n",
     "df_mse = df_mse.dropna(subset=['MSE'])\n",
     "\n",
-    "# Display the dataframe by having it as the last statement\n",
-    "df_mse.sort_values(by='MSE')"
+    "# Display the dataframe\n",
+    "df_mse_sorted = df_mse.sort_values(by='Mean MSE')\n",
+    "df_mse_head = df_mse_sorted.head(5)\n",
+    "print(df_mse_head)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the results of the GridSearch the best max_depth is 6 levels and the best min_sample_leaf is 10 samples per leaf. Now let's look at the metrics of the chosen model:"
+    "From the results of the GridSearch the best `max_depth` is 6 levels and the best `min_sample_leaf` is 10 samples per leaf. Now let's look at the metrics of the chosen model:"
    ]
   },
   {
@@ -1163,7 +1165,19 @@
     "# Combine the DataFrames for validation and testing metrics\n",
     "df_metrics = pd.concat([df_metrics_val, df_metrics_test], axis=1)\n",
     "# Display the DataFrame\n",
-    "df_metrics\n"
+    "df_metrics\n",
+    "\n",
+    "# Scatter plot of actual vs. predicted values on the IVS\n",
+    "plt.scatter(y_val, y_pred_val, label=\"IVS Predictions\", color='b', alpha=0.5)\n",
+    "\n",
+    "# Add a diagonal line for reference\n",
+    "plt.plot([min(y_val), max(y_val)], [min(y_val), max(y_val)], color='r', linestyle='--', label=\"Perfect Predictions\")\n",
+    "\n",
+    "plt.xlabel(\"Actual Values\")\n",
+    "plt.ylabel(\"Predicted Values\")\n",
+    "plt.title(\"Actual vs. Predicted Values on IVS\")\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2099,7 +2113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
