--- a/HA1/HA1.ipynb
+++ b/HA1/HA1.ipynb
@@ -1159,18 +1159,15 @@
    "source": [
     "# Predict on validation set - Decision Tree\n",
     "y_pred_val = dtree_regressor_best.predict(X_val)\n",
-    "\n",
     "# Define metrics for validation set\n",
     "mse_val = mean_squared_error(y_val, y_pred_val)\n",
     "rmse_val = np.sqrt(mse_val)\n",
     "mae_val = mean_absolute_error(y_val, y_pred_val)\n",
     "r2_val = r2_score(y_val, y_pred_val)\n",
-    "\n",
     "# Calculate metrics for validation set\n",
     "metrics_val = {\n",
     "    \"Validation Set\": [mse_val, rmse_val, mae_val, r2_val]\n",
     "}\n",
-    "\n",
     "# Calculate metrics for testing set\n",
     "metrics_test = {\n",
     "    \"Testing Set\": [mse_test, rmse_test, mae_test, r2_test]\n",
@@ -1181,8 +1178,7 @@
     "# Combine the DataFrames for validation and testing metrics\n",
     "df_metrics = pd.concat([df_metrics_val, df_metrics_test], axis=1)\n",
     "# Display the DataFrame\n",
-    "df_metrics\n",
-    "\n"
+    "df_metrics"
    ]
   },
   {
