--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -885,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Change the `User` column to be of categorical type"
+    "### 1.2 Convert the 'User' column to a categorical data type"
    ]
   },
   {
