--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "\n",
     "# import warnings\n",
     "# warnings.filterwarnings('ignore')\n",
-    "pd.set_option('display.max_columns', None) # to be able to show all columns of the df"
+    "pd.set_option('display.max_columns', None) # enable showing all columns of the df"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "4   ?   ?   ?  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,18 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(index=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First row: [0 0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 '0' '0' '0' '0' '0' '0' '0' '0'\n",
-      " '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0'\n",
-      " '0']\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -402,303 +402,39 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>Class</th>\n",
-       "      <th>User</th>\n",
-       "      <th>X0</th>\n",
-       "      <th>Y0</th>\n",
-       "      <th>Z0</th>\n",
-       "      <th>X1</th>\n",
-       "      <th>Y1</th>\n",
-       "      <th>Z1</th>\n",
-       "      <th>X2</th>\n",
-       "      <th>Y2</th>\n",
-       "      <th>Z2</th>\n",
-       "      <th>X3</th>\n",
-       "      <th>Y3</th>\n",
-       "      <th>Z3</th>\n",
-       "      <th>X4</th>\n",
-       "      <th>Y4</th>\n",
-       "      <th>Z4</th>\n",
-       "      <th>X5</th>\n",
-       "      <th>Y5</th>\n",
-       "      <th>Z5</th>\n",
-       "      <th>X6</th>\n",
-       "      <th>Y6</th>\n",
-       "      <th>Z6</th>\n",
-       "      <th>X7</th>\n",
-       "      <th>Y7</th>\n",
-       "      <th>Z7</th>\n",
-       "      <th>X8</th>\n",
-       "      <th>Y8</th>\n",
-       "      <th>Z8</th>\n",
-       "      <th>X9</th>\n",
-       "      <th>Y9</th>\n",
-       "      <th>Z9</th>\n",
-       "      <th>X10</th>\n",
-       "      <th>Y10</th>\n",
-       "      <th>Z10</th>\n",
-       "      <th>X11</th>\n",
-       "      <th>Y11</th>\n",
-       "      <th>Z11</th>\n",
+       "      <th>3</th>\n",
+       "      <th>1</th>\n",
+       "      <th>5</th>\n",
+       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>54.263880</td>\n",
-       "      <td>71.466776</td>\n",
-       "      <td>-64.807709</td>\n",
-       "      <td>76.895635</td>\n",
-       "      <td>42.462500</td>\n",
-       "      <td>-72.780545</td>\n",
-       "      <td>36.621229</td>\n",
-       "      <td>81.680557</td>\n",
-       "      <td>-52.919272</td>\n",
-       "      <td>85.2322638852917</td>\n",
-       "      <td>67.7492195028673</td>\n",
-       "      <td>-73.684130041833</td>\n",
-       "      <td>59.1885757027887</td>\n",
-       "      <td>10.6789364098231</td>\n",
-       "      <td>-71.2977813147725</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56.527558</td>\n",
-       "      <td>72.266609</td>\n",
-       "      <td>-61.935252</td>\n",
-       "      <td>39.135978</td>\n",
-       "      <td>82.538530</td>\n",
-       "      <td>-49.596509</td>\n",
-       "      <td>79.223743</td>\n",
-       "      <td>43.254091</td>\n",
-       "      <td>-69.982489</td>\n",
-       "      <td>87.4508729469625</td>\n",
-       "      <td>68.4008083028339</td>\n",
-       "      <td>-70.703990925959</td>\n",
-       "      <td>61.5874515532753</td>\n",
-       "      <td>11.7799190329758</td>\n",
-       "      <td>-68.827417756239</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.849928</td>\n",
-       "      <td>72.469064</td>\n",
-       "      <td>-62.562788</td>\n",
-       "      <td>37.988804</td>\n",
-       "      <td>82.631347</td>\n",
-       "      <td>-50.606259</td>\n",
-       "      <td>78.451526</td>\n",
-       "      <td>43.567403</td>\n",
-       "      <td>-70.658489</td>\n",
-       "      <td>86.8353875680762</td>\n",
-       "      <td>68.9079249764243</td>\n",
-       "      <td>-71.1383441365739</td>\n",
-       "      <td>61.6864271910576</td>\n",
-       "      <td>11.7934398850428</td>\n",
-       "      <td>-68.88931646056</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.329647</td>\n",
-       "      <td>71.707275</td>\n",
-       "      <td>-63.688956</td>\n",
-       "      <td>36.561863</td>\n",
-       "      <td>81.868749</td>\n",
-       "      <td>-52.752784</td>\n",
-       "      <td>86.320630</td>\n",
-       "      <td>68.214645</td>\n",
-       "      <td>-72.228461</td>\n",
-       "      <td>61.5961571288978</td>\n",
-       "      <td>11.2506481750465</td>\n",
-       "      <td>-68.9564252307431</td>\n",
-       "      <td>77.3872254123912</td>\n",
-       "      <td>42.7178334810919</td>\n",
-       "      <td>-72.0151462991019</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.142401</td>\n",
-       "      <td>71.435607</td>\n",
-       "      <td>-64.177303</td>\n",
-       "      <td>36.175818</td>\n",
-       "      <td>81.556874</td>\n",
-       "      <td>-53.475747</td>\n",
-       "      <td>76.986143</td>\n",
-       "      <td>42.426849</td>\n",
-       "      <td>-72.574743</td>\n",
-       "      <td>86.3687480605765</td>\n",
-       "      <td>67.9012603746826</td>\n",
-       "      <td>-72.4446499648169</td>\n",
-       "      <td>61.2754021959714</td>\n",
-       "      <td>10.8411094568665</td>\n",
-       "      <td>-69.2799064015993</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
-       "      <td>?</td>\n",
+       "      <th>count</th>\n",
+       "      <td>16344</td>\n",
+       "      <td>16265</td>\n",
+       "      <td>15733</td>\n",
+       "      <td>14978</td>\n",
+       "      <td>14775</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Class  User         X0         Y0         Z0         X1         Y1  \\\n",
-       "1      1     0  54.263880  71.466776 -64.807709  76.895635  42.462500   \n",
-       "2      1     0  56.527558  72.266609 -61.935252  39.135978  82.538530   \n",
-       "3      1     0  55.849928  72.469064 -62.562788  37.988804  82.631347   \n",
-       "4      1     0  55.329647  71.707275 -63.688956  36.561863  81.868749   \n",
-       "5      1     0  55.142401  71.435607 -64.177303  36.175818  81.556874   \n",
-       "\n",
-       "          Z1         X2         Y2         Z2                X3  \\\n",
-       "1 -72.780545  36.621229  81.680557 -52.919272  85.2322638852917   \n",
-       "2 -49.596509  79.223743  43.254091 -69.982489  87.4508729469625   \n",
-       "3 -50.606259  78.451526  43.567403 -70.658489  86.8353875680762   \n",
-       "4 -52.752784  86.320630  68.214645 -72.228461  61.5961571288978   \n",
-       "5 -53.475747  76.986143  42.426849 -72.574743  86.3687480605765   \n",
-       "\n",
-       "                 Y3                 Z3                X4                Y4  \\\n",
-       "1  67.7492195028673   -73.684130041833  59.1885757027887  10.6789364098231   \n",
-       "2  68.4008083028339   -70.703990925959  61.5874515532753  11.7799190329758   \n",
-       "3  68.9079249764243  -71.1383441365739  61.6864271910576  11.7934398850428   \n",
-       "4  11.2506481750465  -68.9564252307431  77.3872254123912  42.7178334810919   \n",
-       "5  67.9012603746826  -72.4446499648169  61.2754021959714  10.8411094568665   \n",
-       "\n",
-       "                  Z4 X5 Y5 Z5 X6 Y6 Z6 X7 Y7 Z7 X8 Y8 Z8 X9 Y9 Z9 X10 Y10 Z10  \\\n",
-       "1  -71.2977813147725  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?   ?   ?   ?   \n",
-       "2   -68.827417756239  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?   ?   ?   ?   \n",
-       "3    -68.88931646056  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?   ?   ?   ?   \n",
-       "4  -72.0151462991019  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?   ?   ?   ?   \n",
-       "5  -69.2799064015993  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?  ?   ?   ?   ?   \n",
-       "\n",
-       "  X11 Y11 Z11  \n",
-       "1   ?   ?   ?  \n",
-       "2   ?   ?   ?  \n",
-       "3   ?   ?   ?  \n",
-       "4   ?   ?   ?  \n",
-       "5   ?   ?   ?  "
+       "Class      3      1      5      2      4\n",
+       "count  16344  16265  15733  14978  14775"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'First row: {df.iloc[0].values}')\n",
-    "df.drop(index=0, inplace=True)\n",
-    "df.head()"
+    "df['Class'].value_counts().to_frame().T # dataset is balanced"
    ]
   },
   {
@@ -710,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +590,7 @@
        "0  26717  30372  30372  30372  35543  35543  35543  43909  43909  43909  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,12 +621,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Convert the 'User' column to a categorical data type"
+    "### 1.2 Convert the `User` column to a categorical data type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +696,7 @@
        "count  492  379  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,12 +718,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Normalize the data"
+    "### 1.3 Data Scaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
