update missing values handling

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -464,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing values in specific columns\n"
+      "Number of missing values in each column in the training set\n"
      ]
     },
     {
@@ -590,14 +590,14 @@
        "0  26717  30372  30372  30372  35543  35543  35543  43909  43909  43909  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train = X_train.replace(\"?\", pd.NA)\n",
-    "print('Number of missing values in specific columns')\n",
+    "X_train, X_test, X_ivs = X_train.replace(\"?\", pd.NA), X_test.replace(\"?\", pd.NA), X_ivs.replace(\"?\", pd.NA)\n",
+    "print('Number of missing values in each column in the training set')\n",
     "X_train.isna().sum().to_frame().T"
    ]
   },
