--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Prepare the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -459,12 +466,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.2 Handle missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mark missing data as NaN, so it is easier to handle than '?'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +604,7 @@
        "0  26717  30372  30372  30372  35543  35543  35543  43909  43909  43909  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,26 +616,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.1 Handle missing data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: handle missing values"
+    "#TODO"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Convert the `User` column to a categorical data type"
+    "### 1.3 Convert the `User` column to a categorical data type"
    ]
   },
   {
@@ -718,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Data Scaling"
+    "### 1.4 Data Scaling"
    ]
   },
   {
