--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "4   ?   ?   ?  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "count  16344  16265  15733  14978  14775"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Handle missing values"
+    "### 1.2 Convert the `User` column to a categorical data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>User</th>\n",
+       "      <th>10</th>\n",
+       "      <th>0</th>\n",
+       "      <th>13</th>\n",
+       "      <th>11</th>\n",
+       "      <th>14</th>\n",
+       "      <th>8</th>\n",
+       "      <th>5</th>\n",
+       "      <th>12</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>6</th>\n",
+       "      <th>9</th>\n",
+       "      <th>7</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9573</td>\n",
+       "      <td>9048</td>\n",
+       "      <td>8739</td>\n",
+       "      <td>8061</td>\n",
+       "      <td>7495</td>\n",
+       "      <td>6811</td>\n",
+       "      <td>5105</td>\n",
+       "      <td>4865</td>\n",
+       "      <td>4717</td>\n",
+       "      <td>4513</td>\n",
+       "      <td>4377</td>\n",
+       "      <td>3920</td>\n",
+       "      <td>492</td>\n",
+       "      <td>379</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "User     10    0     13    11    14    8     5     12    1     2     6     9   \\\n",
+       "count  9573  9048  8739  8061  7495  6811  5105  4865  4717  4513  4377  3920   \n",
+       "\n",
+       "User    7    4   \n",
+       "count  492  379  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['User'].value_counts().to_frame().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: one-hot encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Data Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Scale the training set and apply the same scaler to the remaining datasets (test, ivs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Handle missing values"
    ]
   },
   {
@@ -478,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +717,7 @@
        "0  26717  30372  30372  30372  35543  35543  35543  43909  43909  43909  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,124 +730,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.3 Convert the `User` column to a categorical data type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>User</th>\n",
-       "      <th>10</th>\n",
-       "      <th>0</th>\n",
-       "      <th>13</th>\n",
-       "      <th>11</th>\n",
-       "      <th>14</th>\n",
-       "      <th>8</th>\n",
-       "      <th>5</th>\n",
-       "      <th>12</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>6</th>\n",
-       "      <th>9</th>\n",
-       "      <th>7</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>9573</td>\n",
-       "      <td>9048</td>\n",
-       "      <td>8739</td>\n",
-       "      <td>8061</td>\n",
-       "      <td>7495</td>\n",
-       "      <td>6811</td>\n",
-       "      <td>5105</td>\n",
-       "      <td>4865</td>\n",
-       "      <td>4717</td>\n",
-       "      <td>4513</td>\n",
-       "      <td>4377</td>\n",
-       "      <td>3920</td>\n",
-       "      <td>492</td>\n",
-       "      <td>379</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "User     10    0     13    11    14    8     5     12    1     2     6     9   \\\n",
-       "count  9573  9048  8739  8061  7495  6811  5105  4865  4717  4513  4377  3920   \n",
-       "\n",
-       "User    7    4   \n",
-       "count  492  379  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['User'].value_counts().to_frame().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO: one-hot encoding?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.4 Data Scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO: Normalize the training set and apply the same normalizer to the remaining datasets"
    ]
   },
   {
